@@ -585,6 +585,7 @@ export(makeSMOTEWrapper)
 export(makeStackedLearner)
 export(makeSurvTask)
 export(makeTuneControlCMAES)
+export(makeTuneControlDesign)
 export(makeTuneControlGenSA)
 export(makeTuneControlGrid)
 export(makeTuneControlIrace)
