@@ -1,5 +1,5 @@
 % Generated by roxygen2 (4.1.1): do not edit by hand
-% Please edit documentation in R/TuneControl.R, R/TuneControlCMAES.R, R/TuneControlGenSA.R, R/TuneControlGrid.R, R/TuneControlIrace.R, R/TuneControlRandom.R
+% Please edit documentation in R/TuneControl.R, R/TuneControlCMAES.R, R/TuneControlDesign.R, R/TuneControlGenSA.R, R/TuneControlGrid.R, R/TuneControlIrace.R, R/TuneControlRandom.R
 \name{TuneControl}
 \alias{TuneControl}
 \alias{TuneControlCMAES}
@@ -8,6 +8,7 @@
 \alias{TuneControlIrace}
 \alias{TuneControlRandom}
 \alias{makeTuneControlCMAES}
+\alias{makeTuneControlDesign}
 \alias{makeTuneControlGenSA}
 \alias{makeTuneControlGrid}
 \alias{makeTuneControlIrace}
@@ -17,6 +18,10 @@
 makeTuneControlCMAES(same.resampling.instance = TRUE, impute.val = NULL,
   start = NULL, tune.threshold = FALSE, tune.threshold.args = list(),
   log.fun = NULL, ...)
+
+makeTuneControlDesign(same.resampling.instance = TRUE, impute.val = NULL,
+  design = NULL, tune.threshold = FALSE, tune.threshold.args = list(),
+  log.fun = NULL)
 
 makeTuneControlGenSA(same.resampling.instance = TRUE, impute.val = NULL,
   start = NULL, tune.threshold = FALSE, tune.threshold.args = list(),
@@ -77,12 +82,10 @@ See the implementation for details.}
 Further control parameters passed to the \code{control} argument of \code{\link[cmaes]{cma_es}} and
 \code{tunerConfig} argument of \code{\link[irace]{irace}}.}
 
-\item{resolution}{[\code{integer}]\cr
-Resolution of the grid for each numeric/integer parameter in \code{par.set}.
-For vector parameters, it is the resolution per dimension.
-Either pass one resolution for all parameters, or a named vector.
-See \code{\link[ParamHelpers]{generateGridDesign}}.
-Default is 10.}
+\item{design}{[\code{data.frame}]\cr
+\code{data.frame} containing the different parameter settings to be evaluated.
+The columns have to be named according to the \code{ParamSet} which will be used in \code{tune()}.
+Proper designs can be created with \code{\link[ParamHelpers]{generateDesign}} for instance.}
 
 \item{n.instances}{[\code{integer(1)}]\cr
 Number of random resampling instances for irace, see details.
@@ -95,6 +98,13 @@ Default is \code{FALSE}.}
 \item{maxit}{[\code{integer(1)}]\cr
 Number of iterations for random search.
 Default is 100.}
+
+\item{design}{[\code{integer}]\cr
+Resolution of the grid for each numeric/integer parameter in \code{par.set}.
+For vector parameters, it is the resolution per dimension.
+Either pass one resolution for all parameters, or a named vector.
+See \code{\link[ParamHelpers]{generateGridDesign}}.
+Default is 10.}
 }
 \value{
 [\code{\link{TuneControl}}]. The specific subclass is one of
