@@ -82,6 +82,7 @@ Other tune: \code{\link{TuneControl}},
   \code{\link{TuneControlIrace}},
   \code{\link{TuneControlRandom}},
   \code{\link{makeTuneControlCMAES}},
+  \code{\link{makeTuneControlDesign}},
   \code{\link{makeTuneControlGenSA}},
   \code{\link{makeTuneControlGrid}},
   \code{\link{makeTuneControlIrace}},
