@@ -52,6 +52,7 @@ Other tune: \code{\link{ModelMultiplexer}},
   \code{\link{TuneControlIrace}},
   \code{\link{TuneControlRandom}},
   \code{\link{makeTuneControlCMAES}},
+  \code{\link{makeTuneControlDesign}},
   \code{\link{makeTuneControlGenSA}},
   \code{\link{makeTuneControlGrid}},
   \code{\link{makeTuneControlIrace}},
