@@ -12,6 +12,7 @@ mlr_2.4:
 - update on learners: added sparseLDA and removed xgboost
 - reg.km: added param 'iso'
 - classif.mda: added param 'start.method' and changed its default to 'lvq'
+- tuneDesign: Tune a learner with a given Design, so that you can tune it with ParamHelpers::generateDesign
 
 mlr_2.3:
 - resample now returns an object of class ResampleResult (downward compatible)
